--- a/index.html
+++ b/index.html
@@ -655,7 +655,16 @@ function crearCard(p) {
                 <div class="vendedor-link" onclick="verCatalogo('${p.duenoId}', '${p.vendedor}', '${p.fotoPerfilVendedor}')">
                     <i class="fa-solid fa-store"></i> Ver tienda
                 </div>
-                ${!p.vendido ? `<a class="btn-wa" href="https://wa.me/503${p.telefono}"><i class="fa-brands fa-whatsapp"></i> Preguntar</a>` : ''}
+                ${!p.vendido ? <a class="btn-wa"
+   href="https://wa.me/503${p.telefono}?text=${encodeURIComponent(
+     `Hola 👋 vi tu anuncio en CheroMarketApp 🇸🇻
+📦 Producto: ${p.titulo}
+💰 Precio: $${p.precio}
+📍 Ubicación: ${p.muni}, ${p.depto}
+
+¿Aún está disponible?`
+   )}"
+   target="_blank">
                 ${esMio && !p.vendido ? `<button class="btn-vendido-accion" onclick="marcarVendido('${p.id}')">Marcar Agotado</button>` : ''}
                 ${esMio ? `<button class="btn-eliminar-accion" onclick="eliminar('${p.id}')">Eliminar</button>` : ''}
             </div>
