--- a/index.html
+++ b/index.html
@@ -713,5 +713,12 @@ document.getElementById('btnVincular').addEventListener('click', async () => {
   }
 });
 </script>
+<script>
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("service-worker.js")
+    .then(() => console.log("Service Worker listo 🚀"))
+    .catch(err => console.error("Error SW:", err));
+}
+</script>
 </body>
 </html>
