--- a/index.html
+++ b/index.html
@@ -720,5 +720,7 @@ if ("serviceWorker" in navigator) {
     .catch(err => console.error("Error SW:", err));
 }
 </script>
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#317EFB">
 </body>
 </html>
