--- a/index.html
+++ b/index.html
@@ -714,5 +714,20 @@ document.getElementById('btnVincular').addEventListener('click', async () => {
 });
 </script>
 <script>
+   <script>
+  if ("serviceWorker" in navigator) {
+    window.addEventListener("load", () => {
+      navigator.serviceWorker
+        .register("./pwabuilder-sw.js")
+        .then((registration) => {
+          console.log("Service Worker registrado con éxito:", registration.scope);
+        })
+        .catch((error) => {
+          console.log("Fallo en el registro del Service Worker:", error);
+        });
+    });
+  }
+</script>
+ 
 </body>
 </html>
