--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>CheroMarketApp · Pro 🇸🇻</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="manifest" href="manifest.json">
-    <meta name="theme-color" content="#0047AB">
-    <link rel="apple-touch-icon" href="https://cdn-icons-png.flaticon.com/512/1162/1162456.png">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="CheroMarket">
+<meta name="theme-color" content="#0047AB">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-title" content="CheroMarket">
+<link rel="apple-touch-icon" href="icon-192.png">
+
     <style>
         :root{
             --azul:#0047AB; --naranja:#FF8C00; --verde:#25D366;
