--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="apple-mobile-web-app-title" content="CheroMarket">
 <link rel="apple-touch-icon" href="icon-192.png">
-
     <style>
         :root{
             --azul:#0047AB; --naranja:#FF8C00; --verde:#25D366;
@@ -777,9 +776,13 @@ document.getElementById('btnVincular').addEventListener('click', async () => {
   if ("serviceWorker" in navigator) {
     window.addEventListener("load", () => {
       navigator.serviceWorker
-        .register("./pwabuilder-sw.js")
-        .then((registration) => { console.log("SW registrado:", registration.scope); })
-        .catch((error) => { console.log("SW falló:", error); });
+        .register("./sw.js")
+        .then((reg) => {
+          console.log("CheroMarket: PWA Activa", reg.scope);
+        })
+        .catch((err) => {
+          console.error("CheroMarket: Error en SW", err);
+        });
     });
   }
 </script>
