--- a/index.html
+++ b/index.html
@@ -259,6 +259,8 @@
 <div id="modalPerfil">
     <div class="modal-content">
         <h3>Mi Perfil de Vendedor</h3>
+        <hr>
+<div id="seccionTienda"></div>
         <div class="perfil-img-cont" onclick="document.getElementById('fotoPerfilFile').click()">
             <img id="imgPerfilPrevia" class="foto-perfil" src="https://via.placeholder.com/80" alt="Foto de perfil">
             <input type="file" id="fotoPerfilFile" accept="image/*" style="display:none">
@@ -284,7 +286,34 @@
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
 import { getFirestore, collection, addDoc, getDocs, doc, query, orderBy, updateDoc, getDoc, setDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 import { getAuth, onAuthStateChanged, createUserWithEmailAndPassword, signInWithEmailAndPassword, signOut, sendEmailVerification } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
+import { collection, query, where, getDocs } from "firebase/firestore";
 
+async function verificarTienda(user) {
+
+  const q = query(
+    collection(db, "tiendas"),
+    where("propietarioId", "==", user.email)
+  );
+
+  const snapshot = await getDocs(q);
+
+  const contenedor = document.getElementById("seccionTienda");
+
+  if (!snapshot.empty) {
+    const tienda = snapshot.docs[0].data();
+
+    contenedor.innerHTML = `
+      <h4>🏪 ${tienda.nombreTienda}</h4>
+      <p>Plan: ${tienda.plan}</p>
+      <button onclick="verMiTienda()">Ver Mi Tienda</button>
+      <button onclick="actualizarPlan()">Actualizar a Pro</button>
+    `;
+  } else {
+    contenedor.innerHTML = `
+      <button onclick="crearTienda()">Crear Mi Tienda</button>
+    `;
+  }
+}
 const firebaseConfig = {
     apiKey:"AIzaSyD-QOvro2aOC8GpPfnQWkBxZCWIR3lypdI",
     authDomain:"cheromarket.firebaseapp.com",
@@ -328,7 +357,10 @@ const perfilNombreInput = document.getElementById('perfilNombre');
 const perfilTelefonoInput = document.getElementById('perfilTelefono');
 const imgPerfilPrevia = document.getElementById('imgPerfilPrevia');
 const bannerPerfil = document.getElementById('bannerPerfil');
-
+onAuthStateChanged(auth, (user) => {
+    if (user) {
+   verificarTienda(user);
+}
 onAuthStateChanged(auth, async (user) => {
   if (user) {
     MI_ID = user.uid;
