--- a/index.html
+++ b/index.html
@@ -205,8 +205,10 @@
   </div>
 
   <div style="padding: 20px; text-align: center; background-color: #ffffff; border-top: 1px solid #eee;">
-    <button type="button" onclick="alert('Gracias por aceptar los términos de CheroMarketApp')" style="width: 100%; padding: 15px; background-color: #28a745; color: white; border: none; border-radius: 8px; font-size: 16px; font-weight: bold; cursor: pointer; box-shadow: 0 4px 6px rgba(40, 167, 69, 0.2); transition: background 0.3s;">
-      Acepto todos los Términos y Condiciones
+    <button type="button" onclick="aceptarTerminos()" style="width: 100%; padding: 15px; background-color: #28a745; color: white; border: none; border-radius: 8px; font-size: 16px; font-weight: bold; cursor: pointer; box-shadow: 0 4px 6px rgba(40, 167, 69, 0.2); transition: background 0.3s;">
+  Acepto todos los Términos y Condiciones
+</button>
+
     </button>
     <p style="font-size: 11px; color: #999; margin-top: 10px;">Al hacer clic, confirmas que has leído y comprendido los documentos legales de CheroMarketApp.</p>
   </div>
